--- a/en/html/libs/index.html
+++ b/en/html/libs/index.html
@@ -671,6 +671,17 @@
             </td>
           </tr>
           <tr>
+          <td align="right">
+            <a href="./ledbar.html"><img class="iconlibs" src="../../../icons/6464/ledbar.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./ledbar.html">LED Bar</a>
+          </td>
+        </tr>
+          <tr>
             <td align="right">
               <a href="io/rgbled.html"><img class="iconlibs" src="../../../icons/6464/rgbled.png" alt="#########" width="32" height="32" border="0"></a>
             </td>
