--- a/fr/html/libs/index.html
+++ b/fr/html/libs/index.html
@@ -667,6 +667,17 @@
               <a href="io/led.html">LED</a>
             </td>
           </tr>
+		  <tr>
+          <td align="right">
+            <a href="./ledbar.html"><img class="iconlibs" src="../../../icons/6464/ledbar.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./ledbar.html">Barre LED</a>
+          </td>
+        </tr>
           <tr>
             <td align="right">
               <a href="io/rgbled.html"><img class="iconlibs" src="../../../icons/6464/rgbled.png" alt="#########" width="32" height="32" border="0"></a>
@@ -675,7 +686,7 @@
               &nbsp;
             </td>
             <td>
-              <a href="io/led.html">LED RVB</a>
+              <a href="io/rgbled.html">LED RVB</a>
             </td>
           </tr>
           <tr>
@@ -686,7 +697,7 @@
               &nbsp;
             </td>
             <td>
-              <a href="io/7seg.html">Afficheur 7-Segment</a>
+              <a href="io/7seg.html">Afficheur 7-Segments</a>
             </td>
           </tr>
           <tr>
@@ -697,7 +708,7 @@
               &nbsp;
             </td>
             <td>
-              <a href="io/hexdig.html">Afficheur hexadéciamal</a>
+              <a href="io/hexdig.html">Afficheur Hexadécimale</a>
             </td>
           </tr>
           <tr>
@@ -752,7 +763,7 @@
               &nbsp;
             </td>
             <td>
-              <a href="io/led.html">RVB Video</a>
+              <a href="io/led.html">Video RVB</a>
             </td>
           </tr>
         </tbody>
