--- a/fr/html/libs/mem/rom.html
+++ b/fr/html/libs/mem/rom.html
@@ -69,15 +69,15 @@
           <var>Adresse</var>
         </dt>
         <dd>
-          Bus entrée&nbsp;: Sélectionne la position de la mémoire à laquelle le circuit accède actuellement.
+          Bus entrée&nbsp;: Sélectionne la position de la mémoire à laquelle le circuit accède actuellement. La largeur de donnée est égale à <b class="property">Largeur d'adresse</b>
         </dd>
         <dt>
           <var>Sortie Data</var>
         </dt>
         <dd>
-          Bus Sortie&nbsp;: Il émet les données qui seront lues à la position spécifiée par la valeur des broches d'adresse
+          Bus Sortie&nbsp;: Il émet les données qui seront lues à la position spécifiée par la valeur des broches d'adresse. <La largeur de donnée est égale à <b class="property">Largeur de donnée</b>
         </dd>
-<!--à
+<!--
         <dt>
           <var>sel</var> on south edge (input, bit width 1)
         </dt>
