--- a/he/html/libs/index.html
+++ b/he/html/libs/index.html
@@ -714,6 +714,17 @@
                 <a href="io/led.html">LED</a>
             </td>
         </tr>
+		<tr>
+            <td align="right">
+                <a href="./led.html"><img alt="#########" border=0 class="iconlibs" height="32" src="../../../icons/6464/ledbar.png" width="32"></a>
+            </td>
+            <td>
+                &nbsp;
+            </td>
+            <td>
+                <a href="./ledbar.html">סרגל LED</a>
+            </td>
+        </tr>
         <tr>
             <td align="right">
                 <a href="io/rgbled.html"><img alt="#########" border=0 class="iconlibs"
