--- a/he/html/libs/io/index.html
+++ b/he/html/libs/io/index.html
@@ -90,20 +90,19 @@
         </tr>
         <tr>
             <td align="right">
-                <a href="./led.html"><img alt="#########" border=0 class="iconlibs" height="32"
-                                          src="../../../../icons/6464/led.png" width="32"></a>
+                <a href="./ledbar.html"><img alt="#########" border=0 class="iconlibs" height="32" src="../../../../icons/6464/ledbar.png" width="32"></a>
             </td>
             <td>
                 &nbsp;
             </td>
             <td>
-                <a href="./led.html">סרגל LED</a>
+                <a href="./ledbar.html">סרגל LED</a>
             </td>
         </tr>
         <tr>
             <td align="right">
-                <a href="./ledbar.html"><img alt="#########" border=0 class="iconlibs"
-                                             height="32" src="../../../../icons/6464/ledbar.png" width="32"></a>
+                <a href="./rgbled.html"><img alt="#########" border=0 class="iconlibs"
+                                             height="32" src="../../../../icons/6464/rgbled.png" width="32"></a>
             </td>
             <td>
                 &nbsp;
