--- a/pt/html/libs/io/index.html
+++ b/pt/html/libs/io/index.html
@@ -25,6 +25,9 @@
             <td align="right">
                <a href="./button.html"><img class="iconlibs" src="../../../../icons/6464/button.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			<td>
+            &nbsp;
+           </td>
             <td>
               <a href="button.html">Botão</a>
             </td>
@@ -33,14 +36,48 @@
             <td align="right">
               <a href="joystick.html"><img src="../../../../icons/6464/joystick.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			<td>
+            &nbsp;
+          </td>
             <td>
               <a href="joystick.html">Joystick</a>
             </td>
           </tr>
+		  <tr>
+          <td align="right">
+            <a href="./DipSwitch.html"><img class="iconlibs" src="../../../../icons/6464/dipswitch.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./DipSwitch.html">Dip Switch</a>
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+        </tr>
+		        <tr>
+          <td></td>
+        </tr>
+        <tr>
+          <td align="right">
+            <a href="./joystick.html"><img class="iconlibs" src="../../../../icons/6464/joystick.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./joystick.html">Joystick</a>
+          </td>
+        </tr>
           <tr>
             <td align="right">
               <a href="keyboard.html"><img src="../../../../icons/6464/keyboard.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			<td>
+            &nbsp;
+          </td>
             <td>
               <a href="keyboard.html">Teclado</a>
             </td>
@@ -49,14 +86,42 @@
             <td align="right">
               <a href="led.html"><img src="../../../../icons/6464/led.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			<td>
+            &nbsp;
+          </td>
             <td>
               <a href="led.html">LED</a>
             </td>
           </tr>
+		  <tr>
+          <td align="right">
+            <a href="./ledbar.html"><img class="iconlibs" src="../../../../icons/6464/ledbar.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./ledbar.html">LED Bar</a>
+          </td>
+        </tr>
+		<tr>
+          <td align="right">
+            <a href="./rgbled.html"><img class="iconlibs" src="../../../../icons/6464/rgbled.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./rgbled.html">RGB LED</a>
+          </td>
+        </tr>
           <tr>
             <td align="right">
               <a href="7seg.html"><img src="../../../../icons/6464/7seg.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			<td>
+            &nbsp;
+          </td>
             <td>
               <a href="7seg.html">Display de 7-segmentos</a>
             </td>
@@ -65,6 +130,9 @@
             <td align="right">
               <a href="hexdig.html"><img src="../../../../icons/6464/hexdig.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			<td>
+            &nbsp;
+          </td>
             <td>
               <a href="hexdig.html">Display hexadecimal</a>
             </td>
@@ -73,6 +141,9 @@
             <td align="right">
               <a href="dotmat.html"><img src="../../../../icons/6464/dotmat.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			<td>
+            &nbsp;
+          </td>
             <td>
               <a href="dotmat.html">Matriz de LEDs</a>
             </td>
@@ -81,10 +152,48 @@
             <td align="right">
               <a href="tty.html"><img src="../../../../icons/6464/tty.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			<td>
+            &nbsp;
+          </td>
             <td>
               <a href="tty.html">TTY</a>
             </td>
           </tr>
+		          </tr>
+        <tr>
+          <td align="right">
+            <a href="./portio.html"><img class="iconlibs" src="../../../../icons/6464/portio.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./portio.html">Port I/O</a>
+          </td>
+        </tr>
+        <tr>
+          <td align="right">
+            <a href="./repetar.html"><img class="iconlibs" src="../../../../icons/6464/repetar.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./repetar.html">Repetar Local Bus</a>
+          </td>
+        </tr>
+        </tr>
+		  <tr>
+          <td align="right">
+            <a href="./rgbvideo.html"><img class="iconlibs" src="../../../../icons/6464/rgbvideo.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./rgbvideo.html">RGB Video</a>
+          </td>
+        </tr>
         </tbody>
       </table>
       <p>
