--- a/ru/html/libs/io/index.html
+++ b/ru/html/libs/io/index.html
@@ -25,14 +25,34 @@
             <td align="right">
               <a href="./button.html"><img class="iconlibs" src="../../../../icons/6464/button.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			   <td>
+            &nbsp;
+          </td>
             <td>
               <a href="button.html">Кнопка</a>
             </td>
           </tr>
+		          <tr>
+          <td align="right">
+            <a href="./DipSwitch.html"><img class="iconlibs" src="../../../../icons/6464/dipswitch.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./DipSwitch.html">Dip Switch</a>
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+        </tr>
           <tr>
             <td align="right">
               <a href="joystick.html"><img src="../../../../icons/6464/joystick.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			   <td>
+            &nbsp;
+          </td>
             <td>
               <a href="joystick.html">Джойстик</a>
             </td>
@@ -41,6 +61,9 @@
             <td align="right">
               <a href="keyboard.html"><img src="../../../../icons/6464/keyboard.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			   <td>
+            &nbsp;
+          </td>
             <td>
               <a href="keyboard.html">Клавиатура</a>
             </td>
@@ -49,14 +72,42 @@
             <td align="right">
               <a href="led.html"><img src="../../../../icons/6464/led.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			   <td>
+            &nbsp;
+          </td>
             <td>
               <a href="led.html">Светодиод</a>
             </td>
           </tr>
+		  		<tr>
+          <td align="right">
+            <a href="./ledbar.html"><img class="iconlibs" src="../../../../icons/6464/ledbar.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./ledbar.html">LED Bar</a>
+          </td>
+        </tr>
+		<tr>
+          <td align="right">
+            <a href="./rgbled.html"><img class="iconlibs" src="../../../../icons/6464/rgbled.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./rgbled.html">RGB LED</a>
+          </td>
+        </tr>
           <tr>
             <td align="right">
               <a href="7seg.html"><img src="../../../../icons/6464/7seg.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			<td>
+            &nbsp;
+          </td>
             <td>
               <a href="7seg.html">7-сегментный индикатор</a>
             </td>
@@ -65,14 +116,21 @@
             <td align="right">
               <a href="hexdig.html"><img src="../../../../icons/6464/hexdig.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			<td>
+            &nbsp;
+          </td>
             <td>
               <a href="hexdig.html">Шестнадцатеричный индикатор</a>
             </td>
           </tr>
+		  
           <tr>
             <td align="right">
               <a href="dotmat.html"><img src="../../../../icons/6464/dotmat.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			<td>
+            &nbsp;
+          </td>
             <td>
               <a href="dotmat.html">Светодиодная матрица</a>
             </td>
@@ -81,10 +139,47 @@
             <td align="right">
               <a href="tty.html"><img src="../../../../icons/6464/tty.png" alt="#########" border=0 height="32" width="32"></a>
             </td>
+			<td>
+            &nbsp;
+          </td>
             <td>
               <a href="tty.html">Терминал</a>
             </td>
           </tr>
+		          <tr>
+          <td align="right">
+            <a href="./portio.html"><img class="iconlibs" src="../../../../icons/6464/portio.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./portio.html">Port I/O</a>
+          </td>
+        </tr>
+        <tr>
+          <td align="right">
+            <a href="./repetar.html"><img class="iconlibs" src="../../../../icons/6464/repetar.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./repetar.html">Repetar Local Bus</a>
+          </td>
+        </tr>
+        
+		  <tr>
+          <td align="right">
+            <a href="./rgbvideo.html"><img class="iconlibs" src="../../../../icons/6464/rgbvideo.png" alt="#########" border=0 height="32" width="32"></a>
+          </td>
+          <td>
+            &nbsp;
+          </td>
+          <td>
+            <a href="./rgbvideo.html">RGB Video</a>
+          </td>
+        </tr>
         </tbody>
       </table>
       <p>
