--- a/docstatus.html
+++ b/docstatus.html
@@ -108,7 +108,7 @@
 		<td align="center" class="needtask"><a href="./de/html/guide/about/index.html">_A</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/guide/about/index.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/guide/about/index.html">__</a></td>
-		<td align="center" class="good"><a href="./he/html/guide/about/index.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/about/index.html">_C</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
