--- a/fr/html/guide/about/index.html
+++ b/fr/html/guide/about/index.html
@@ -120,23 +120,25 @@
       <ul>
 	    <li>David H. Hutchens, Millersville University, Pennsylvania, USA,
 		</li>
-        <li>Kevin Walsh - College of the Holy Cross - USA
+        <li>Kevin Walsh - College of the Holy Cross - USA,
 	    </li>
 		<li>Moshe Berman, Brooklyn College, USA,
 	    </li>
 		<li>Theldo Cruz Franqueira, Pontifícia Universidade Católica de Minas Gerais, Brazil,
 		</li>
-		<li>Theo Kluter, Bern University of Applied Sciences, Switzerland.
+		<li>Theo Kluter, Bern University of Applied Sciences, Switzerland,
 		</li>
 		<li>Marcin Orlowski, Poland,
 		</li>
 		<li>Tom Niget, LEAT, Polytech Nice-Sophia, France,
 		</li>
-		<li>Haute École Spécialisée Bernoise - Switzerland
+		<li>Liu Yuchen](https://github.com/smallg0at), Beijing University of Technology(https://www.bjut.edu.cn/), China,
 		</li>
-		<li>Haute École du paysage, d'ingénierie et d'architecture de Genève - Switzerland
+		<li>Haute École Spécialisée Bernoise - Switzerland,
+		</li>
+		<li>Haute École du paysage, d'ingénierie et d'architecture de Genève - Switzerland,
         </li>
-        <li>Haute École d'Ingénierie et de Gestion du Canton de Vaud - Switzerland
+        <li>Haute École d'Ingénierie et de Gestion du Canton de Vaud - Switzerland,
         </li>
        </ul>
       <p>
