--- a/en/html/libs/io/dipswitch.html
+++ b/en/html/libs/io/dipswitch.html
@@ -48,19 +48,19 @@
         Behavior
       </h2>
       <p>
-        Outputs 0 normally; but when the user is pressing the the button using the Poke Tool, the output is 1.
+        Outputs  set to <b class="zerov">0</b> normally; when one of the switches is pressed with the Poke tool, the output switches toggle from <b class="zerov">0</b> to <b class="unov">1</b> or <b class="unov">1</b> to <b class="zerov">0</b>
       </p>
       <h2>
         Pins
       </h2>
       <p>
-        A button has only one pin, a 1-bit output, which is 0 except when the user is pressing the button using the Poke Tool, when it is 1.
+        A dip switch has as many outputs as specified by the  <b class="property">Number of Switch</b> property. Normally set to 0.
       </p>
       <h2>
         Attributes
       </h2>
       <p>
-        When the component is selected or being added, the arrow keys alter its <q>Facing</q> attribute.
+         When the component is selected or being added, the <b class="tkeybd">arrow</b> keys alter its <b class="property">Facing</b> attribute.
       </p>
       <div class="attliste">
         <dl>
@@ -70,19 +70,13 @@
           <dd>
             The location of the output pin relative to the component.
           </dd>
-          <dt class="lib">
-            Color
-          </dt>
-          <dd>
-            The color with which to display the button.
-          </dd>
-          <dt class="lib">
+         <dt class="lib">
             Label
           </dt>
-          <dd>
-            The text within the label associated with the component.
+		  <dd>
+             The text within the label associated with the component.
           </dd>
-          <dt class="lib">
+         <dt class="lib">
             Label Location
           </dt>
           <dd>
@@ -97,8 +91,20 @@
           <dt class="lib">
             Label Color
           </dt>
+		  <dd>
+		    The color with which to draw the label. 
+		  </dd>
+		  <dt class="lib">
+            Label Visible
+          </dt>
           <dd>
-            The color with which to draw the label.
+            Determines whether the label is visible or not.
+          </dd>
+		  <dt class="lib">
+            Number of switch
+          </dt>
+		  <dd>
+            determines the number of switches in the component.
           </dd>
         </dl>
       </div>
@@ -106,7 +112,7 @@
         Poke Tool Behavior
       </h2>
       <p>
-        When the mouse button is pressed, the component's output will be 1. Upon releasing the mouse button, the output reverts back to 0.
+        When one of the switches is pressed with the Poke tool, the output switches toggle from <b class="zerov">0</b> to <b class="unov">1</b> or <b class="unov">1</b> to <b class="zerov">0</b>
       </p>
       <h2>
         Text Tool Behavior
